@@ -1,4 +1,4 @@
-* Thu Feb 07 2020 <gerbier@users.sourceforge.net> 2.15-1
+* Fri Feb 21 2020 <gerbier@users.sourceforge.net> 2.15-1
 - fix error on rpmrebuild_files.sh line 204 (verify tag)
 - use env in shebang to avoid path problemes (/bin versus /usr/bin)
 - updated htmc doc (features, usage)
@@ -6,6 +6,7 @@
 - fix bug on change-spec-preamble (move processing_init before CommandLineParsing) thanks Nerijus
 - fix cpio problem : add --no-absolute-filenames option
 - better diagnostic on internal error
+- fix bug on conditional requires (with space)
 
 * Fri Oct 19 2018 <gerbier@users.sourceforge.net> 2.14-1
 - add list of optional tags, to allow rpmrebuild work with old rpm versions
